fixed touch shift bug

--- a/src/styles/svgMap/svgBox.css
+++ b/src/styles/svgMap/svgBox.css
@@ -1,4 +1,5 @@
 .svg-box {
+	touch-action: none;
 	position:relative;
 	width: 100%;
 	height: 100%;
